@@ -4,14 +4,13 @@
 \description{
   Coerces a dataset  into a topo (topographic) dataset.
 }
-\usage{as.topo(longitude, latitude, z, filename="", processingLog)}
+\usage{as.topo(longitude, latitude, z, filename="")}
 
 \arguments{
   \item{longitude}{a vector of longitudes}
   \item{latitude}{a vector of latitudes}
   \item{z}{a matrix of heights (positive over land)}
   \item{filename}{name of data (used when called by \code{\link{read.topo}})}
-  \item{processingLog}{a log action (used when called by \code{\link{read.topo}})
 }}
 
 \details{Mainly used by \code{\link{read.topo}}.}
